Add firebase and routes auth, main

--- a/angular.json
+++ b/angular.json
@@ -125,6 +125,10 @@
               "devServerTarget": "ingenieria-dsp:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
