--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "chart.js": "^2.9.4",
     "firebase": "^7.0 || ^8.0",
     "ng-lazyload-image": "^9.1.0",
     "ng2-img-max": "^2.2.4",
