Error in dashboard chart.js

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "src/custom-theme.scss",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
