:construction: Advance - generate reception

--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "@angular/router": "~11.2.0",
     "chart.js": "^2.9.4",
     "firebase": "^7.0 || ^8.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
     "ng-lazyload-image": "^9.1.0",
     "ng2-charts": "^2.4.2",
     "ng2-img-max": "^2.2.4",
     "ngx-mask": "^11.1.4",
+    "ngx-print": "^1.2.0-beta.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.9",
@@ -39,6 +42,7 @@
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@types/jasmine": "~3.6.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "firebase-tools": "^9.4.0",
