--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,7 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0",
-    "nodemailer": "^6.5.0"
+    "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
