--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~11.2.0",
     "chart.js": "^2.9.4",
     "firebase": "^7.0 || ^8.0",
+    "firebase-functions": "^3.13.2",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
     "ng-lazyload-image": "^9.1.0",
