--- a/.github/workflows/greetings.yaml
+++ b/.github/workflows/greetings.yaml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Gracias por tu fabuloso código 💛'' first issue'
-        pr-message: 'Gracias por tu fabuloso código 💛'' first pr'
+        issue-message: 'Gracias por tu ayuda 💛'
+        pr-message: 'Gracias por tu fabuloso código 💛'
