--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "meraki" : "firebase emulators:start --import functions/backup"
+    "meraki" : "firebase emulators:start --import functions/backup --export-on-exit"
   },
   "private": true,
   "dependencies": {
