--- a/firebase.json
+++ b/firebase.json
@@ -10,6 +10,10 @@
       {
         "source": "**",
         "destination": "/index.html"
+      },
+      {
+        "source": "/setClaimsAsTechnician",
+        "function": "setClaimsAsTechnician"
       }
     ]
   },
