--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "meraki" : "firebase emulators:start --import functions/backup"
+    "meraki": "firebase emulators:start --import functions/backup"
   },
   "private": true,
   "dependencies": {
@@ -29,6 +29,7 @@
     "firebase-functions": "^3.13.2",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
+    "moment": "^2.29.1",
     "ng-lazyload-image": "^9.1.0",
     "ng2-charts": "^2.4.2",
     "ng2-img-max": "^2.2.4",
