--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,6 @@ testem.log
 Thumbs.db
 .firebase/hosting.ZGlzdC9pbmdlbmllcmlhLWRzcA.cache
 firebase-debug.log
-*.log
+ui-debug.log
+firestore-debug.log
+pubsub-debug.log
