:hammer: Destroying bad backups

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,21 @@ firestore-debug.log
 pubsub-debug.log
 backup/
 *.log
+
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
+
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-0
+
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-1
+
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-2
+
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-3
+
+firebase-export-1625732300231hH97XM/firestore_export/firestore_export.overall_export_metadata
+firebase-export-1625732300231hH97XM/firestore_export/firestore_export.overall_export_metadata
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-0
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-1
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-2
+firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-3
