--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.3.1",
     "moment": "^2.29.1",
+    "moment-precise-range-plugin": "^1.3.0",
+    "moment-range": "^4.0.2",
     "ng-lazyload-image": "^9.1.0",
     "ng2-charts": "^2.4.2",
     "ng2-img-max": "^2.2.4",
