--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,17 @@ firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/ou
 firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-1
 firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-2
 firebase-export-1625732300231hH97XM/firestore_export/all_namespaces/all_kinds/output-3
+
+firebase-export-16262315556853IZeby/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
+
+firebase-export-16262315556853IZeby/firestore_export/all_namespaces/all_kinds/output-0
+
+firebase-export-16262315556853IZeby/firestore_export/all_namespaces/all_kinds/output-1
+
+firebase-export-16262315556853IZeby/firestore_export/all_namespaces/all_kinds/output-2
+
+firebase-export-16262315556853IZeby/firestore_export/all_namespaces/all_kinds/output-3
+
+firebase-export-16262315556853IZeby/firestore_export/firestore_export.overall_export_metadata
+
+report.20210713.194454.22040.0.001.json
