:hammer: :package: Fixed daily entries +  added staging side project

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,7 @@ firebase-export-16262315556853IZeby/firestore_export/all_namespaces/all_kinds/ou
 firebase-export-16262315556853IZeby/firestore_export/firestore_export.overall_export_metadata
 
 report.20210713.194454.22040.0.001.json
+
+.firebase/hosting.ZGlzdFxpbmdlbmllcmlhLWRzcA.cache
+
+.firebase/
