--- a/.firebaserc
+++ b/.firebaserc
@@ -9,6 +9,7 @@
     }
   },
   "projects": {
-    "default": "ferreyros-mvp"
+    "default": "ferreyros-mvp",
+    "staging": "ferreyros-mvp-staging"
   }
 }
