--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build-prod": "ng build --configuration production",
+    "build-stag": "ng build --configuration staging",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
