:construction: Advance enhacements

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,11 @@ report.20210713.194454.22040.0.001.json
 .firebase/hosting.ZGlzdFxpbmdlbmllcmlhLWRzcA.cache
 
 .firebase/
+
+firebase-export-1629746903091DepIco/firestore_export/all_namespaces/all_kinds/all_namespaces_all_kinds.export_metadata
+
+firebase-export-1629746903091DepIco/firestore_export/all_namespaces/all_kinds/output-0
+
+firebase-export-1629746903091DepIco/firestore_export/all_namespaces/all_kinds/output-1
+
+firebase-export-1629746903091DepIco/firestore_export/firestore_export.overall_export_metadata
