🎨 🔨 fix bug download file excel

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ firebase-export-1629746903091DepIco/firestore_export/firestore_export.overall_ex
 firebase-debug.log
 firestore-debug.log
 ui-debug.log
+yarn.lock
